# orthanc

./: .dockerignore  .env.example  .envrc  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  PROJECT_PLAN.md  README.md  TODO.md  flake.nix  process-compose.yaml
.github/workflows/: docker.yml
apps/lightweaver_server/: Cargo.toml  TODO.md
apps/lightweaver_server/migrations/: 20260421000001_initial_schema.sql
apps/lightweaver_server/src/: lib.rs  main.rs  sqlite.rs
apps/lightweaver_server/src/ports/: collection.rs  genre.rs  image.rs  library.rs  media_credit.rs  media_item.rs  media_progress.rs  media_stream.rs  mod.rs  password_reset.rs  person.rs  playback_session.rs  session.rs  settings.rs  task.rs  track_preferences.rs  transcoding_profile.rs  user.rs  user_preferences.rs
apps/orthanc_server/: AUTHENTICATION.md  Cargo.toml  README.md
apps/orthanc_server/migrations/: 20260417000001_initial_schema.sql  20260418000001_metadata_providers.sql  20260418000002_add_anidb_provider.sql  20260418000003_add_tvdb_provider.sql  20260419000001_user_track_preferences.sql  20260419000002_user_preferences.sql
apps/orthanc_server/src/: db.rs  main.rs
apps/orthanc_server/src/api/: admin_playback.rs  auth.rs  error.rs  libraries.rs  media.rs  metadata_api.rs  mod.rs  settings.rs  state.rs  streaming.rs  users.rs
apps/orthanc_server/src/auth/: jwt.rs  middleware.rs  password.rs  tokens.rs
apps/orthanc_server/src/metadata/: anidb.rs  mod.rs  tmdb.rs  tvdb.rs
apps/orthanc_server/src/models/: library.rs  media.rs  media_stream.rs  mod.rs  session.rs  track_preference.rs  transcoding_profile.rs  user.rs  user_preference.rs
apps/orthanc_server/src/scanner/: mod.rs  parser.rs  sidecar.rs  walker.rs
apps/orthanc_server/src/subtitles/: classify.rs  cleanup.rs  languages.rs  mod.rs  security.rs  vtt.rs
apps/orthanc_server/src/transcoding/: mod.rs
apps/orthanc_ui/: Cargo.toml  Dioxus.toml  README.md
apps/orthanc_ui/assets/styling/: main.css
apps/orthanc_ui/src/: main.rs  state.rs  storage.rs
apps/orthanc_ui/src/api/: mod.rs
apps/orthanc_ui/src/components/: mod.rs
apps/orthanc_ui/src/views/: admin_libraries.rs  admin_playback.rs  admin_settings.rs  admin_users.rs  app_shell.rs  browse_movies.rs  browse_shows.rs  home.rs  login.rs  mod.rs  navbar.rs  player.rs  settings.rs  setup.rs
apps/orthanc_ui_mobile/: Cargo.toml  Dioxus.toml
apps/orthanc_ui_mobile/assets/styling/: mobile.css
apps/orthanc_ui_mobile/src/: main.rs  storage.rs
apps/orthanc_ui_mobile/src/components/: bottom_nav.rs  hero_section.rs  horizontal_row.rs  media_card.rs  mod.rs
apps/orthanc_ui_mobile/src/views/: detail.rs  home.rs  login.rs  mobile_shell.rs  mod.rs  player.rs  profile.rs  server_config.rs
crates/orthanc_core/: Cargo.toml
crates/orthanc_core/src/: auth.rs  formatters.rs  lib.rs  player_logic.rs  storage.rs  theme.rs
crates/orthanc_core/src/api/: mod.rs
docker/: entrypoint.sh
subtitle_cache/: 10.vtt  11.vtt  12.vtt  13.vtt  14.vtt  15.vtt  16.vtt  17.vtt  3.vtt  4.vtt  5.vtt  9.vtt
