 [workspace]
 resolver = "2"
 members = []

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Shared dependencies with common versions
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"

# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "migrate"] }

# Web framework
axum = "0.8"

# Dioxus
dioxus = "0.7"
