 [workspace]
 resolver = "2"
 members = [
 "apps/orthanc_ui"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["roberte777 <rewilkes0041@gmail.com>"]
license = "MIT"

[workspace.dependencies]
# Shared dependencies with common versions
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"

# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "migrate"] }

# Web framework
axum = "0.8"

# Dioxus
dioxus = "0.7"
