 [workspace]
 resolver = "2"
 members = ["apps/orthanc_server",
 "apps/orthanc_ui"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["roberte777 <rewilkes0041@gmail.com>"]
license = "MIT"

[workspace.dependencies]
# Shared dependencies with common versions
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"

# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "migrate"] }

# Web framework
axum = "0.8"
tower-http = { version = "0.6.8", features = ["cors", "trace", "fs"] }
tower = "0.5.3"

# Auth & Crypto
argon2 = "0.5.3"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
rand = "0.10.1"
sha2 = "0.11.0"
hex = "0.4.3"
chrono = { version = "0.4.44", features = ["serde"] }
getrandom = "0.4.2"

# Dioxus
dioxus = "0.7"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Regex
regex = "1.12"

# XML
quick-xml = { version = "0.39", features = ["serialize"] }

# Compression
flate2 = "1"

# Async utilities
tokio-util = { version = "0.7", features = ["io"] }
futures-core = "0.3"

# Web APIs
web-sys = { version = "0.3", features = ["Window", "Storage", "HtmlVideoElement", "HtmlMediaElement", "Document", "HtmlElement", "Element", "Event", "TimeRanges", "KeyboardEvent", "EventTarget"] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
