[package]
name = "lightweaver_server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]

tokio.workspace = true
tokio-util.workspace = true
axum.workspace = true
sqlx.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
async-trait.workspace = true
